--- a/client/main.html
+++ b/client/main.html
@@ -3,6 +3,8 @@
   <!--Import materialize.css-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
   <!--<link rel="stylesheet" href="label.css" />-->
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,4 +13,5 @@
 <body>
   <div id="render-target"></div>
   <!--JavaScript at end of body for optimized loading-->
+  
 </body>
