modal para ganador. guarda las respuestas

--- a/client/main.html
+++ b/client/main.html
@@ -6,6 +6,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
   <!--Let browser know website is optimized for mobile-->
   <link rel="stylesheet" href="https://jsprieto10.github.io/css/semantic-ui.css"/>
+  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/components/icon.min.css'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
