--- a/client/main.html
+++ b/client/main.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://jsprieto10.github.io/css/semantic-ui.css"/>
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/components/icon.min.css'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MateQuiz | Aprende jugando</title>
 </head>
 
 <body>
